// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly 1`] = `
<div
  className="root rootColorLight   "
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly disabled 1`] = `
<div
  className="root rootColorLight   isDisabled"
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly in danger color 1`] = `
<div
  className="root rootColorDanger   "
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly raised 1`] = `
<div
  className="root rootColorLight  rootRaised "
>
  <p>
    Card content
  </p>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root rootColorWarning rootDense rootRaised isDisabled"
  id="custom-id"
>
  <p>
    Card content
  </p>
</div>
`;
